force-app/main/default/objects/BTN_BenefitMember__c/BTN_BenefitMember__c.object-meta.xml
<CustomObject>
    <label>Benefit Member</label>
    <nameField>
        <displayFormat>BEN{00000000}</displayFormat>
        <label>Benefit Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>