force-app/main/default/objects/BTN_BenefitMember__c/fields/Amount_frm__c.field-meta.xml
<CustomField>
    <fullName>Amount_frm__c</fullName>
    <formula>Benefit__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>