force-app/main/default/objects/BTN_BenefitMember__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit</label>
    <referenceTo>BTN_Benefit__c</referenceTo>
    <relationshipLabel>Benefit Members</relationshipLabel>
    <relationshipName>BenefitMembers</relationshipName>
    <type>Lookup</type>
</CustomField>