force-app/main/default/objects/BTN_BenefitMember__c/fields/VAT_frm__c.field-meta.xml
<CustomField>
    <fullName>VAT_frm__c</fullName>
    <formula>Benefit__r.VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>